--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,93 +1,77 @@
-body{
-    margin: 0;
-    padding: 0;
-  }
-  div#map {
+*{ 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+div#map {
     
-    width: 100vw;
-    height: 99vh;
-    display: inline-flex;
-    margin-left: 390px;
-    margin-right: auto;
-    margin-top: -56px;
-  }
-
-  * { box-sizing: border-box; }
-body {
-  font: 16px Arial;
-}
-.autocomplete {
-  /*the container must be positioned relative:*/
-  position: absolute;
-  /* display: inline-block;
-  vertical-align: middle; */
-
-}
-input {
-  border: 1px solid transparent;
-  background-color: #f1f1f1;
-  padding: 10px;
-  font-size: 16px;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  margin-left: 5px;
-}
-input[type=text] {
-  background-color: #f1f1f1;
   width: 100%;
-  
+  height: 99vh;
+  display: inline-flex;
 }
-button{
-  background-color: rgb(119, 180, 39);
-  color: #fff;
-
-}
-.autocomplete-items {
+input#recherche{
   position: absolute;
-  border: 1px solid #d4d4d4;
-  border-bottom: none;
-  border-top: none;
-  z-index: 99;
-  /*position the autocomplete items to be the same width as the container:*/
-  top: 95%;
-  left: auto;
-  right: auto;
-  margin-left: 5px;
-}
-.autocomplete-items div {
-  display: flex;
-  padding: 10px;
-  cursor: pointer;
-  background-color: #fff;
-  border-bottom: 1px solid #d4d4d4;
-
-}
-.autocomplete-items div:hover {
-  /*when hovering an item:*/
-  background-color: #e9e9e9;
-
-}
-.autocomplete-active {
-  /*when navigating through the items using the arrow keys:*/
-  background-color: red !important;
-  color: #ffffff;
-}
-form{
-  background-color: green;
-}
-#conteneur{
-  display: flex;
-}
-h1{
-  z-index: 99;
-}
-
-
-
-.recherche{
-  position: absolute;
-  top: 20%;
+  top: 10%;
   left: 50%;
   transform: translate(-50%,-50%);
+  z-index: 9000;
+  height: 35px;
+  border-radius: 10px;
+  width: 450px;
+  border-color: transparent;
+  box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.5);
+  text-align: center;
+}
+.recherche{
+  position: absolute;
+  top: 10%;
+  left: 60%;
+  transform: translate(-50%,-50%);
+  z-index: 9001;
+  border-radius: 200px;
+  background-color: rgb(85, 85, 180);
+  border-color: transparent;
+  border: 0px solid transparent;
+  width: 100px;
+  height: 35px;
+
+}
+
+.autocomplete-items{
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  z-index: 8999;
+  width: 450px;
+  height: 250px;
+  background-color:white;
+  border-radius: 10px;
+  box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.5);
+  overflow-y: scroll;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+}
+
+
+.test:hover{
+  background-color:#DFDEDE;
 
   
+}
+
+#icon{
+  color: white;
+
+}
+
+#icon2{
+  position: absolute;
+  top: 10%;
+  left: 40%;
+  transform: translate(-50%,-50%);
+  z-index: 9000;
+  color: rgb(85, 85, 180);
+
+}
