--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -73,3 +73,44 @@ input#recherche{
   color: rgb(85, 85, 180);
 
 }
+h2#creationclient{
+  text-align: center;
+}
+.tableau{
+  position: absolute;
+  top: 55%;
+  left: 21%;
+  transform: translate(-50%,-50%);
+  box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
+  width: 40%;
+}
+.table{
+  border-radius: 5px;
+  font-size: 30px;
+  font-weight: normal;
+  border: none;
+  border-collapse: collapse;
+  width: 100%;
+  max-width: 100%;
+  white-space: nowrap;
+  background-color: white;
+}
+.table td, .ftable th {
+  text-align: center;
+  padding: 8px;
+}
+.table td {
+  border-right: 1px solid #f8f8f8;
+  font-size: 30px;
+}
+.table thead th {
+  color: #ffffff;
+  background: #4FC3A1;
+}
+.table thead th:nth-child(odd) {
+  color: #ffffff;
+  background: #324960;
+}
+.table tr:nth-child(even) {
+  background: #F8F8F8;
+}
