--- a/public/assets/css/Tableau.css
+++ b/public/assets/css/Tableau.css
@@ -42,3 +42,15 @@
     justify-content: center;
     height: 100vh;
   }
+  h2#gestionclient{
+    position: absolute;
+    text-align: center;
+    top: 10%;
+    
+  }
+  h2#creationclient{
+    position: absolute;
+    bottom: 10%;
+    left: 45%;
+    text-align: center;
+  }
