--- a/public/assets/css/Tableau.css
+++ b/public/assets/css/Tableau.css
@@ -42,15 +42,20 @@
     justify-content: center;
     height: 100vh;
   }
-  h2#gestionclient{
+  h1#gestionclient{
     position: absolute;
     text-align: center;
     top: 10%;
-    
   }
   h2#creationclient{
     position: absolute;
     bottom: 10%;
     left: 45%;
     text-align: center;
+  }
+  h2#carte{
+    position: absolute;
+    text-align: center;
+    top: 20%;
+    left: 45%;
   }
